--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 
 
 
-    <section class="testimonails2 carousel slide testimonials-slider cid-12 " data-interval="false " id="testimonials ">
+<!--     <section class="testimonails2 carousel slide testimonials-slider cid-12 " data-interval="false " id="testimonials ">
 
 
 
@@ -815,7 +815,7 @@
         </div>
     </section>
 
-
+ -->
 
 
 
