--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                                 Phasellus cursus, lacus at fringilla lacinia, leo leo eleifend tortor, quis sollicitudin
                                 mauris ipsum a elit. </strong><br><br><strong>South Carolina 3531 Camden Place 54</strong></h4>
 
-                            <h4 class="card-phone display-5 "><strong>+1 (234) 567 89 01</strong></h4>
+<!--                             <h4 class="card-phone display-5 "><strong>+1 (234) 567 89 01</strong></h4> -->
 
                         </div>
                         <div class="icon-wrapper mbr-flex ">
@@ -786,7 +786,7 @@
                                 mauris ipsum a elit.<br><br></strong>
                                 <div><strong>Duis eget tincidunt dui, non auctor mauris.</strong></div>
                             </h5>
-                            <h4 class="card-phone display-5 "><strong>+1 (234) 567 89 01</strong></h4>
+<!--                             <h4 class="card-phone display-5 "><strong>+1 (234) 567 89 01</strong></h4> -->
                         </div>
                     </div>
                 </div>
