--- a/index.html
+++ b/index.html
@@ -765,7 +765,9 @@
                             <h3 class="card-title display-5 "><strong>Company Office</strong></h3>
                             <h4 class="card-text display-4 "><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                 Phasellus cursus, lacus at fringilla lacinia, leo leo eleifend tortor, quis sollicitudin
-                                mauris ipsum a elit. </strong><br><br><strong>South Carolina 3531 Camden Place 54</strong></h4>
+                                mauris ipsum a elit. </strong><br><br>
+<!--                                 <strong>South Carolina 3531 Camden Place 54</strong>-->
+                            </h4> 
 
 <!--                             <h4 class="card-phone display-5 "><strong>+1 (234) 567 89 01</strong></h4> -->
 
@@ -784,7 +786,7 @@
                             <h5 class="card-text display-4 "><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                 Phasellus cursus, lacus at fringilla lacinia, leo leo eleifend tortor, quis sollicitudin
                                 mauris ipsum a elit.<br><br></strong>
-                                <div><strong>Duis eget tincidunt dui, non auctor mauris.</strong></div>
+<!--                                 <div><strong>Duis eget tincidunt dui, non auctor mauris.</strong></div> -->
                             </h5>
 <!--                             <h4 class="card-phone display-5 "><strong>+1 (234) 567 89 01</strong></h4> -->
                         </div>
