--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
      .carousel-caption{
            height: 250px;
-           width: 800px;
+           width: 1100px;
            background: rgba(0, 0, 0, 0.8);
            background-image: linear-gradient(
       to top,
@@ -46,20 +46,22 @@
       rgba(0, 0, 0, 0) 60%,
       rgba(0, 0, 0, 0.8) 100%
     );
-           top: 50%;
+           top: 40%;
            left: 50%;
            transform: translate(-50%,-50%);
            color: #fff;
         }
 
     .carousel-caption h1{
+        padding-top:20px;
         padding-bottom: 20px;
         font-size: 50px;
         font-weight: 400;
     }
 
     .carousel-caption p{
-        font-size: 30px;
+        font-size: 20px;
+        padding-top:20px;
 
     }
    
@@ -106,7 +108,7 @@
 
                 <div class="navbar-brand">
 
-                    <img src="assets\images\logo-small.png" style=" width:50px ">
+                    <img src="assets\images\logo-small.png" style=" width:100px ">
 
                     <span class="navbar-caption-wrap "><a class="navbar-caption text-info display-2 " href="https://virtuallytesting.com/ "style="margin-left:10px;">Virtually Testing Foundation</a></span>
                 </div>
@@ -157,7 +159,7 @@
 
 
 
-    <section class="slidemodal">
+    <section class="slidemodal cid-2">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
