--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         color: #ffffff;
         padding: 1em 1.8em;
         font-size: 18px;
+        font-width: 700 px;
         text-decoration: none;
         display: inline-block;
         margin-bottom: 10px;
